<resources>
    <string name="app_name">Open Wallet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="expense_label_date">Date</string>
    <string name="expense_label_value">Value</string>
    <string name="expense_label_compartment">Compartment</string>
    <string name="expense_label_category">Category</string>
    <string name="expense_label_button">Add expense</string>
    <string name="expense_register_title">Register Expense</string>
</resources>
